# techsage

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build-and-push.yml  event.json
techsage/: agents.py  app.py  configure.py  crew.py  launcher.py  setup.py  tasks.py  tools.py
techsage/agent_core/: agents.py  crew.py  llm.py  tasks.py  tools.py
techsage/app/: agents.py  crew.py  launcher.py  llm.py  tasks.py  tools.py
techsage/models/: llama38b_Modelfile  mixtral_Modelfile
techsage/utils/: constants.py  load_config.py  stream_to_io.py  tools.py
