[tool.poetry]
name = "techsage"
version = "0.1.0"
description = "Leverage the power of multi-agent AI to fuel your daily tech, programming, and architecture insights."
authors = ["victor <victorgoubet@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
lxml = "^5.2.2"
crewai = "^0.30.11"
crewai-tools = "^0.2.6"


openai = "^1.34.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
setup-sage = "techsage.setup:main"
launch-sage = "techsage.app.launcher:launch"