[tool.poetry]
name = "techsage"
version = "0.1.0"
description = "Leverage the power of multi-agent AI to fuel your daily tech, programming, and cloud architecture insights."
authors = ["victor <victorgoubet@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
lxml = "^5.2.2"
crewai = "^0.30.11"
crewai-tools = "^0.2.6"
beautifulsoup4 = "^4.12.3"

streamlit = "^1.35.0"
duckduckgo-search = "^6.1.6"
httpcore = "^1.0.5"
httpx = "^0.27.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
configure-sage = "techsage.configure:main"
launch-sage = "techsage.launcher:launch"